--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,9 @@ jobs:
           node-version: lts/*
           cache: npm
       - run: npm ci
-      - run: npm run build
+      - env:
+          NODE_OPTIONS: "--openssl-legacy-provider"
+        run: npm run build
       - run: rm .gitignore
       - run: npx semantic-release
         env:
